--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,14 @@ dependencies {
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	developmentOnly'org.springframework.boot:spring-boot-devtools'
+	implementation 'org.apache.tiles:tiles-jsp:3.0.8'
+	implementation 'org.springframework.boot:spring-boot-devtools:2.7.5'
+	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.5'
+	implementation 'javax.servlet:jstl:1.2'
+	implementation 'org.apache.tiles:tiles-core:3.0.8'
+
+
+
 }
 
 tasks.named('test') {
