--- a/build.gradle
+++ b/build.gradle
@@ -19,24 +19,16 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
+	implementation 'org.springframework.boot:spring-boot-devtools:2.7.5'
+	implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
+	runtimeOnly 'mysql:mysql-connector-java'
 	compileOnly 'org.projectlombok:lombok'
-	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	developmentOnly'org.springframework.boot:spring-boot-devtools'
-	/*implementation 'org.apache.tiles:tiles-jsp:3.0.8'*/
-	implementation 'org.springframework.boot:spring-boot-devtools:2.7.5'
-	testImplementation 'org.springframework.boot:spring-boot-starter-test:2.7.5'
-	implementation 'javax.servlet:jstl:1.2'
-	/*implementation 'org.apache.tiles:tiles-core:3.0.8'*/
-	implementation 'nz.net.ultraq.thymeleaf:thymeleaf-layout-dialect'
-
-
-
-
 }
 
 tasks.named('test') {
